Final Product | FAQ Some Modification | Clients Some Mod | Footer Added --> overflow fixed

--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,11 @@
     scroll-behavior: smooth;
 }
 
+/* overflow hidden */
+html {
+    overflow-x: hidden;
+}
+
 /* Media Queries */
 @media (max-width: 575.98px) {
 
@@ -71,30 +76,34 @@
         font-weight: bold;
         font-stretch: expanded;
     }
+
     /* shine animation */
-    .main-text::before{
+    .main-text::before {
         content: "";
         position: absolute;
         left: -100%;
         width: 100%;
         height: 8%;
-        background: linear-gradient(to right, transparent, #ffffff3a, transparent);
+        background: linear-gradient(to right, transparent, #ffffff73, transparent);
         animation: shine 3.3s linear infinite;
-        
-      }
-    
-      @keyframes shine {
+
+    }
+
+    @keyframes shine {
         0% {
-          left: -100%;
+            left: -100%;
         }
+
         50% {
-          left: 100%;
+            left: 100%;
         }
+
         100% {
-          left: 100%;
+            left: 100%;
         }
-      }
-      /* keyframe */
+    }
+
+    /* keyframe */
 
     .main-img>img {
         height: 10rem;
@@ -115,8 +124,9 @@
         font-weight: bolder;
         font-size: larger;
     }
+
     /* shine animation */
-    .sub-devstella::before{
+    .sub-devstella::before {
         content: "";
         position: absolute;
         left: -100%;
@@ -124,8 +134,8 @@
         height: 3%;
         background: linear-gradient(to right, transparent, #ffffff3a, transparent);
         animation: shine 3.3s linear infinite;
-        
-      }
+
+    }
 
     /* btn-9  */
     .btn-9 {
@@ -137,7 +147,7 @@
         color: white;
         font-family: 'Caprasimo', cursive;
     }
-    
+
 
     .btn-a>i {
         color: blueviolet;
@@ -442,6 +452,105 @@
 
 /* // X-Large devices (large desktops, less than 1400px) */
 @media (min-width: 1200px) and (max-width: 1399.98px) {
+    .nav-brand {
+        height: 90px;
+        width: 200px;
+    }
+
+    .my-nav {
+        padding: 0 !important;
+    }
+
+    .nav-bar {
+        box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    }
+
+    .mybtn {
+        border: none !important;
+    }
+
+    .mybtn:focus {
+        box-shadow: none !important;
+    }
+
+    .nav-link {
+        font-family: 'Roboto Slab', serif !important;
+    }
+
+    /* main para css */
+    .glass {
+
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 600px;
+        margin-top: 10px;
+    }
+
+    .main-para {
+        position: inherit;
+        background: rgba(255, 255, 255, 0.63);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 10px;
+        height: 600px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-text {
+        font-family: 'Caprasimo', cursive;
+        font-weight: bold;
+        font-stretch: expanded;
+    }
+
+
+    .main-img>img {
+        height: 525px;
+    }
+
+    .main-img {
+        display: flex;
+        position: absolute;
+        margin-left: 70rem;
+        margin-top: -50px;
+    }
+
+    .sub-para {
+        padding: .5rem;
+    }
+
+    .sub-text {
+        font-family: 'Vollkorn', serif;
+        padding: .5rem;
+    }
+
+    .sub-devstella {
+        color: blueviolet;
+        font-weight: bolder;
+        font-size: larger;
+    }
+
+    /* btn-11 */
+    .btn-9 {
+        border: none;
+        width: 10rem;
+        height: 2.5rem;
+        border-radius: 15px;
+        background-color: black;
+        color: white;
+        font-family: 'Caprasimo', cursive;
+    }
+
+    .btn-a>i {
+        color: blueviolet;
+    }
+}
+
+/* upto to 2560 pixels devices larger devices */
+@media (min-width: 1400px) and (max-width: 2560px) {
     .nav-brand {
         height: 90px;
         width: 200px;
